--- a/moinda-api/src/main/resources/static/css/styles.css
+++ b/moinda-api/src/main/resources/static/css/styles.css
@@ -11086,6 +11086,28 @@ header.masthead h1, header.masthead .h1 {
 #pagination a {display:inline-block;margin-right:10px;}
 #pagination .on {font-weight: bold; cursor: default; color:#f4623a;}
 
+.active-ellipisis-max-width100vh {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  max-width: 100vh;
+  width: auto;
+}
+
+.active-ellipisis-max-width30vh {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  max-width: 30vh;
+  width: auto;
+}
+
+.active-ellipisis-max-width175px {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  max-width: 175px;
+}
 
 /* 모달 스타일 */
 .modal {
