--- a/moinda-api/src/main/resources/templates/meeting/meetings.html
+++ b/moinda-api/src/main/resources/templates/meeting/meetings.html
@@ -13,17 +13,15 @@
                         <hr class="divider"/>
                     </div>
                 </div>
-                <div class="row gx-4 gx-lg-5 justify-content-center mb-5">
+                <div class="row gx-4 gx-lg-5 justify-content-center"
+                        style="margin-bottom: 10rem !important;">
                     <div class="col-lg-6">
                         <div class="meetings">
 
                         </div>
-                    </div>
-                </div>
-                <div class="row gx-4 gx-lg-5 justify-content-center mb-5">
-                    <div
-                            class="pagination col-lg-6 text-white font-weight-bold"
-                            style="display: flex; justify-content: center;">
+                        <div class="pagination col-lg-6 text-white font-weight-bold"
+                             style="display: flex; justify-content: center;">
+                        </div>
                     </div>
                 </div>
             </div>
