--- a/moinda-api/src/main/resources/templates/meeting/meetings.html
+++ b/moinda-api/src/main/resources/templates/meeting/meetings.html
@@ -4,8 +4,34 @@
 <th:block th:replace="~{fragment/fragment :: setBody(~{ :: body})}">
     <th:block th:fragment="body">
 
+        <div id="chat-page"
+             style="display: none;
+             background: linear-gradient(to bottom, rgba(92, 77, 66, 0.8) 0%, rgba(92, 77, 66, 0.8) 100%), url(/assets/img/bg-masthead.jpg);">
+            <div class="chat-container"
+                    style="margin-top: 75px;">
+                <div class="chat-header">
+                    <h2>채팅방</h2>
+                </div>
+                <div class="connecting">
+                    연결중...
+                </div>
+                <ul id="messageArea">
+
+                </ul>
+                <form id="messageForm" name="messageForm">
+                    <div class="form-group">
+                        <div class="input-group clearfix">
+                            <input type="text" id="message" placeholder="Type a message..." autocomplete="off" class="form-control"/>
+                            <button type="submit" class="primary">보내기</button>
+                        </div>
+                    </div>
+                </form>
+            </div>
+        </div>
+
         <!-- Masthead-->
         <header class="masthead" style="height: auto; min-height: 100vh;">
+            <button id="testBttn">모달창 열기</button>
             <div class="container px-4 px-lg-5 h-75">
                 <div class="row gx-4 gx-lg-5 h-20 align-items-center justify-content-center">
                     <div class="col-lg-8 col-xl-6 text-center">
@@ -40,6 +66,13 @@
                 }
 
                 const session = [[${session.session}]]
+
+                const testBtn = document.querySelector("#testBttn")
+
+                testBtn.addEventListener("click", () => {
+                    document.querySelector("#chat-page").style.display = "block"
+                    document.querySelector(".masthead").style.display = "none"
+                })
 
                 const meetingsDiv = document.querySelector(".meetings")
 
